# personal-api

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.local.yml  docker-compose.yml  sqlx-data.json
.github/workflows/: pipeline.yml
migrations/: 20210610193127_contact.sql  20210612160808_contact.sql  20210902155455_repositories.sql  20210910183153_add_fields_to_repo.sql
queries/: Contributions.graphql  Repositories.graphql
src/: contact.rs  github.rs  main.rs
src/github/: api.rs  repository.rs
