[package]
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
edition = "2021"
name = "personal-api"
version = "0.2.3"

[profile.dev]
debug = 0

[dependencies]
anyhow = "1.0.44"
axum = "0.2.8"
dotenv = "0.15.0"
envy = "0.4.2"
graphql_client = "0.10.0"
lettre = { version = "0.10.0-rc.3", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "uuid", "offline"] }
tokio = { version = "1.12.0", features = ["full"] }
tower = { version = "0.4.10", features = ["util", "timeout"] }
tower-http = { version = "0.1.1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
